# real-estate-dashboard

./: db_setup.cql  pyproject.toml
streeteasy/streeteasy_rent/: cities.json  scrapy.cfg
streeteasy/streeteasy_rent/streeteasy_rent/: items.py  kafka_to_cassandra.py  middlewares.py  pipelines.py  settings.py
streeteasy/streeteasy_rent/streeteasy_rent/services/: details_parser.py  kafka_producer.py  streeteasy_rent.avsc  streeteasy_rent_parser.py
streeteasy/streeteasy_rent/streeteasy_rent/spiders/: streeteasy_rent.py
