[tool.poetry]
name = "real-estate-dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
kafka-python = "^2.0.2"
pyspark = "^3.5.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
